Fix auth controller tests